[package]
name = "protocolpb"
version = "0.1.0"
authors = ["Valery Vybornov <vvybornov@gmail.com>"]
build = "build.rs"

[dependencies]
protobuf = "1.4"

#grpc  = "0.2"
#futures = "0.1"
#futures-cpupool = "0.1"
#tls-api = "0.1"
#httpbis = "0.4"

[build-dependencies]
protoc-rust = "1.4"
#protoc-rust-grpc = "0.2"