[package]
name = "rhdfs"
version = "0.1.0"
authors = ["Valery Vybornov <vvybornov@gmail.com>"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
protobuf = "1.4"
byteorder = "1.2"
bytes = "0.4"
crc = "^1.0.0"
uuid = { version = "0.6", features = ["v4"] }
log = "0.4"

protocolpb = { path = "../protocolpb" }

[dev-dependencies]
env_logger = "0.5"